--- a/app.html
+++ b/app.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" type="text/css" href="src/css/base.css">
   </head>
   <body>
-    <div id="app" class="full-height"></div>
     <!-- build:js app.min.js -->
-    <script src="public/build/bundle.js"></script>
+    <script src="public/build/bundle.min.js"></script>
   </body>
 </html>
