--- a/app.html
+++ b/app.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <!-- build:js app.min.js -->
-    <script src="public/build/bundle.min.js"></script>
+    <script src="public/build/bundle.js"></script>
   </body>
 </html>
