--- a/app.html
+++ b/app.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" type="text/css" href="src/css/base.css">
   </head>
   <body>
-    <script src="public/build/bundle.min.js"></script>
+    <script src="public/build/bundle.js"></script>
   </body>
 </html>
