--- a/app.html
+++ b/app.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
     <title>新鲜事儿</title>
     <link rel="stylesheet" type="text/css" href="src/css/base.css">
   </head>
